fix: extra page on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,6 +49,7 @@ body {
 .panel {
 	position: relative;
 	height: 100vh;
+	max-height: -webkit-fill-available;
 	overflow: hidden;
 }
 
